# ChangeLog for dev-ruby/psych
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/psych/ChangeLog,v 1.3 2014/09/17 05:24:46 graaff Exp $

*psych-2.0.6 (17 Sep 2014)

  17 Sep 2014; Hans de Graaff <graaff@gentoo.org> +psych-2.0.6.ebuild:
  Version bump.

  27 Jun 2014; Manuel Rüger <mrueg@gentoo.org> psych-2.0.5.ebuild:
  Remove useless blank line.

*psych-2.0.5 (27 Jun 2014)

  27 Jun 2014; Manuel Rüger <mrueg@gentoo.org> +metadata.xml,
  +psych-2.0.5.ebuild:
  Initial ebuild.