@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST psych-2.0.5.gem 124928 SHA256 4f8458fbf1628df11e973d62a1ca7d3817a3bb11214aadc984d8caf9c05ec55e SHA512 59d424e35dc700b349ee6d1304577dbe3b1acff20c98a553cc915ec0334aa2003ff623e1a5e61913d53522bac92000adbe0f65d97f1702a6c30d1deea52b48ff WHIRLPOOL af9629da97f06e2c2830c6a8132952b0cce583f6266120ff89a7655050680f7d8c55abda440555bd9b0e1e6086f54de623debbaa91e19349359a5adb949ee8c7
 DIST psych-2.0.6.gem 125440 SHA256 dd3d8662d682e771bc2205b44de7e241c30869eca8395a02776aca878d678d00 SHA512 d3eaa9e081922482281b4c790db59efd3864aa39d538f88fe10d2f29a8e0c381efd24fe8c438a2e3ecaa1c92909806f79bf3dd2b2a6c2c815a585830d225bc7e WHIRLPOOL b614b21d9477912cdfe34b380440b4d21f73b3536c889c744a251ba676fcd4e3382e23fa910d7aec8ddc1522cb99de09e50618bd8ee970c14be15ab0511c6611
+DIST psych-2.0.8.gem 125952 SHA256 0dcaf5c3c5c34ad7389079240723f9e2fa28924b358a2fdb862b7ed3c11d8116 SHA512 bc58304b482b71e04bc16bf34cc99f1bb9e8ef4b1ced7b54c195510f710dfb3741dff2651d692967b52aa05fc820e357c2091f300963027b00ec860fedbdad41 WHIRLPOOL 4a5ce82744bff597a7bab1de305290fbfa127c75296ceb454c71eec2c4bc114b2749bad5e1a8cff45f91cf05f9ddbda9b09403363718c38e858bd06e2efde2c9
 EBUILD psych-2.0.5.ebuild 1007 SHA256 a8fab5f888027502ffa6791e2224932af617a6dd910f015c722f5e667e1b05fe SHA512 d30e1883feb5c9edd0a7f9cb5b473ab7223eeb7ba8b0a7be201d3d9c9b84f99a9ebe3e6325ca299838f4df414afa3afc80c2ac14520dbe525b1cf6f1b104bb8f WHIRLPOOL a2fd815bee6e7f5b4b4034d4ba240668b911e0964d12b0c74030b7da45df3197c5d51926c5411bf056d05f90033cd35a23458f24ff0ded3080908f8e1afc4e2d
 EBUILD psych-2.0.6.ebuild 1008 SHA256 93239347d02d183bf3795d6eb0731482d700766c8a855c7cf914e25dc1be85af SHA512 f52f2aed53a58ebe4097f750f224cfaefc6fc3def5ed4964259af6930db53911facbd3ea443d4cb18b0c86bd4cdfff9ec4df15d59506a869c2f410ad322b809a WHIRLPOOL 51afb0fcce340a28a6dc1f2e108f5055d9da4b5f45fdcb8fac3d6b377fdba545a5c675c06f1cb51235b7c8dae2d3a8068997ebc718d2a2cb06db25a3814f4388
-MISC ChangeLog 547 SHA256 c5f95224b18b9733d54b91c526d9c6032fe0c9c6c7829085384e8c0373062ef4 SHA512 b88fc6027afcb6855c8af2ee5620117539c0ab93cb7ccbea9aaaa8ac9f371aebce0b72823203c35f1424980f4fb832046936812493c0a5710f383762768c250e WHIRLPOOL 59cde324e52ac018edaca26284fd5b9a7eec21b85a01fd37e2071b02d1438dd8c086bfee0df2b02e5a98beab470113a508fe5707352c94af01c2b60491b62ea5
+EBUILD psych-2.0.8.ebuild 986 SHA256 f753097814d33023a6fbb631986531269476dd3042d6f19eef5137770fbf9262 SHA512 da5a184586ad203bc5e96c67dd675d3a0d00b65744fc83b85c3b57cc17020683fba22d4fc6c76fdc695cebf1f3c86f6381fed3e5196947dc43579e075a40ad4f WHIRLPOOL e968d19395196c3df3b8ffa134cc795d6c0c54adf2e68d04f5421b4c51664a65d2498433092bb5ee5d04e253906cb399c68c4e579e5c1a283a22f7ecb610e9f8
+MISC ChangeLog 718 SHA256 58a1ec50705169ae642d66d7e4bd2d3db9478e1a0a425f959be091a030c9f6e0 SHA512 7da6b05a997361602985f38e0a643f1094389335d224093085edea05cb3b0d2b37c14b62ee68da31556b54270ac54c2a935471ba44e340176bb8af146dc56fbe WHIRLPOOL 09329dbac1d3fd69d89b1bd92f5a644be269bb76e3a8886fe79ebd19647b0e392a54300561e394c332b301a22838428e300a2eeeb6c2dbcb7491b9210925a21a
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlQZGyQACgkQiIP6VqMIqNdhBAD/WtH9jUiI+3kfiNbqF9zJVtvw
-xe/crOVyOVUoUC/xd6AA/RIzonCw/VgKRLCX+fAxpqO5s/fy0sUE727gebNh9PYt
-=ywkE
+iF4EAREIAAYFAlSBXN8ACgkQiIP6VqMIqNdIOAEAiBLRmuuaSU8NeMajfZUEUVS4
+jNE3syGylfjkSnhT0ZEA/0zVzJ3rgWP/x5h0Ht2rCFMPDKq+jV7l5w80FKIrqeIG
+=fgHy
 -----END PGP SIGNATURE-----
